Bug 769356: Calling transaction.abort() should leave transaction.error as null, but throwing exceptions should set transaction.error. r=sicking